data/all_generated_tests/raw_wast_tests/br_table_EdgeCaseFailuresinbr_table_2510.wast
;; ```  10. **Vector Max Length with Consistency Check**:    ```plaintext    Use a `br_table` instruction with the vector of labels at the maximum length supported by `wizard_engine`, ensuring operand types and arities are consistent and verify if any corner-case inconsistency arises.

(assert_invalid
  (module
    (func
      (block
        (loop
          (br_table 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)